# onzecurrency

./: .gitignore  CMakeLists.txt  Dockerfile  IDEAS.md  LICENSE  LOGIN.md  Makefile  POCO.md  PROTOCOL.md  README.md  TODO.md  build.sh  docker-compose.yml  ip_adress_master_peer.json  ip_peers.json
crowd/include/: mock_p2p_handler.hpp
crowd/scripts/: build.py  send_to_cin.py
crowd/src/: block.cpp  server.cpp
include/: auth.hpp  authentication.hpp  configdir.hpp  external_ip.hpp  hash.hpp  main.hpp  merkle_tree.hpp  p2p.hpp  p2p_handler.hpp  ping.hpp  poco.hpp  verification.hpp
include/libcoin/: block_matrix.hpp  merkle_tree_c.hpp  p2p_c.hpp  p2p_network_c.hpp  poco_c.hpp  prev_hash_c.hpp  protocol_c.hpp  transactions.hpp  verification_c.hpp
include/libcommon/: attributes.hpp  base58.hpp  base64.h  bech32.hpp  crypto.h  crypto.hpp  crypto_ecdsa.hpp  crypto_rsa.hpp  crypto_shab58.hpp  globals.hpp  print_or_log.hpp  secblock.h  span.hpp  stdafx.h  strencodings.hpp  string.hpp  tinyformat.hpp  vector.hpp
include/libcrowd/: all_full_hashes.hpp  all_hashes.hpp  configdir.hpp  create_block.hpp  crypto_main.hpp  full_hash.hpp  ip_peers.hpp  merkle_tree.hpp  message_vec.hpp  p2p.hpp  p2p_handler.hpp  p2p_message.hpp  p2p_network.hpp  poco.hpp  prev_hash.hpp  random.hpp  rocksy.hpp  salt.hpp  signature.hpp  verification.hpp
include/liblogin/: auth.hpp  crypto.hpp  keypair.hpp
include/libnetwork/: p2p_message.hpp  p2p_network.hpp
include/libpoco/: all_hashes.hpp  all_hashes_mat.hpp  block_matrix.hpp  intro_msg_mat.hpp  message_vec.hpp  poco_coin.hpp  poco_crowd.hpp  sharding.hpp  synchronisation.hpp  transactions.hpp
include/ui/desktop/: bridge.hpp  desktop.hpp  main.hpp
include/ui/terminal/: main.hpp
legacy/crowd/: .gitignore
legacy/crowd/include/: auth.hpp
legacy/crowd/scripts/: CREATE VENV.md
legacy/crowd/src/: auth.cpp  merkle_tree.cpp  verification.cpp
legacy/libcrowd/: CMakeLists.txt
legacy/libcrowd/include/: interface.hpp
legacy/libcrowd/tests/: poco_unittest.cpp  verification_unittest.cpp
libcrowd/: TODO.md
libcrowd/include/: p2p.hpp
libcrowd/src/: poco.cpp  protocol.cpp  udp_client.cpp  udp_server.cpp  upnp.cpp
libcrowd/tests/: main.cpp
liblogin/include/: auth.hpp
onzehub-terminal/: CMakeLists.txt  README.md
papers/: proof-of-partnership.md  proof-of-sorts.md  tackling_the_scaling_problem.md
scripts/: build.py  build.sh  build_for_testing.py  local_system_testing.py  logs_analyzer.py  remote_script_setup.py  remote_script_test.py  remote_setup.py  remote_upgrade.py  send_to_cin.py  system_tester.py  tmux.sh
src/: authentication.cpp  block.cpp  client.cpp  external_ip.cpp  interface.cpp  main.cpp  merkle_tree.cpp  p2p.cpp  p2p_handler.cpp  parse_ip_address.cpp  ping.cpp  poco.cpp  protocol.cpp  server.cpp  udp_client.cpp  udp_server.cpp  upnp.cpp  verification.cpp
src/legacy/: client_prev.cpp  server_prev.cpp
src/libcoin/: CMakeLists.txt  block_c.cpp  block_matrix.cpp  p2p_c.cpp  p2p_client_c.cpp  p2p_server_c.cpp  poco_c.cpp  prev_hash_c.cpp  protocol_c.cpp  transactions.cpp  verification_c.cpp
src/libcommon/: CMakeLists.txt  base58.cpp  base64.cpp  bech32.cpp  crypto.cpp  crypto_ecdsa.cpp  crypto_rsa.cpp  crypto_rsa_2.cpp  crypto_shab58.cpp  stdafx.cpp  strencodings.cpp
src/libcrowd/: CMakeLists.txt  all_full_hashes.cpp  all_hashes.cpp  block.cpp  configdir.cpp  create_block.cpp  full_hash.cpp  interface.cpp  ip_peers.cpp  message_vec.cpp  p2p.cpp  p2p_c.cpp  p2p_client.cpp  p2p_handler.cpp  p2p_s.cpp  p2p_server.cpp  parse_ip_address.c  poco.cpp  prev_hash.cpp  protocol.cpp  rocksy.cpp  salt.cpp  signature.cpp  tcp_peer.cpp  udp_client.cpp  udp_server.cpp  verification.cpp
src/libcrowd/p2p/: client.cpp  crypto_main.cpp  p2p.cpp  p2p_client.cpp  p2p_server.cpp  server.cpp  tcp_client.cpp  tcp_server.cpp
src/liblogin/: CMakeLists.txt  auth.cpp  crypto.cpp  keypair.cpp
src/libnetwork/: CMakeLists.txt  p2p_client.cpp  p2p_server.cpp
src/libpoco/: CMakeLists.txt  all_hashes.cpp  all_hashes_mat.cpp  block_matrix.cpp  block_matrix_c.cpp  database_sharding.cpp  intro_msg_mat.cpp  message_vec.cpp  poco_coin.cpp  poco_crowd.cpp  synchronisation.cpp  transactions.cpp
src/ui/desktop/: CMakeLists.txt  bridge.cpp  desktop.cpp  main.cpp
src/ui/terminal/: CMakeLists.txt  main.cpp
tests/: auth_unittest.cpp  configdir_unittest.cpp  interface_unittest.cpp  main_unittest.cpp  p2p_unittest.cpp  poco_unittest.cpp
tests/libcrowd/: CMakeLists.txt  configdir_unittest.cpp  hash_unittest.cpp  p2p_unittest.cpp  poco_unittest.cpp  protocol_unittest.cpp  rocksy_unittest.cpp  verification_unittest.cpp
tests/liblogin/: CMakeLists.txt  auth_unittest  auth_unittest.cpp
tests/system_testing/: analyzer.py  tester.py
tests/ui/terminal/: main_unittest.cpp
